--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "d3": "^7.8.4",
     "google-map-react": "^2.2.1",
     "leaflet": "^1.9.4",
@@ -15,9 +16,11 @@
     "ol": "^7.3.0",
     "pigeon-maps": "^0.21.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.0.25",
+    "react-mapbox-gl": "^5.1.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -40,7 +43,7 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
+      "last 10 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
